[gd_scene load_steps=18 format=3 uid="uid://3nakcacgcc0l"]

[ext_resource type="Script" path="res://Game/bomb.gd" id="1_bbuuw"]
[ext_resource type="Texture2D" uid="uid://dtkubm5u4cy27" path="res://Assets/Art/bomb1.png" id="1_ffdpt"]
[ext_resource type="Texture2D" uid="uid://c6pll74cet3je" path="res://Assets/Art/bomb2.png" id="3_km2xa"]
[ext_resource type="Texture2D" uid="uid://dc5u158vir51y" path="res://Assets/Art/bomblight1.png" id="4_gmvrb"]
[ext_resource type="Texture2D" uid="uid://bequpx0qj7aag" path="res://Assets/Art/bomb3.png" id="5_t5be4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qm227"]
atlas = ExtResource("1_ffdpt")
region = Rect2(0, 0, 8, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_yknar"]
atlas = ExtResource("1_ffdpt")
region = Rect2(8, 0, 8, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_76o5c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm227")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yknar")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_40udf"]
atlas = ExtResource("3_km2xa")
region = Rect2(0, 0, 8, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0h14"]
atlas = ExtResource("3_km2xa")
region = Rect2(8, 0, 8, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_snesk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40udf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0h14")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_i222q"]
atlas = ExtResource("5_t5be4")
region = Rect2(0, 0, 8, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i2dv"]
atlas = ExtResource("5_t5be4")
region = Rect2(8, 0, 8, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_61sk8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i222q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i2dv")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6ses"]
size = Vector2(6, 5.5)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_u8h06"]
polygon = PackedVector2Array(0, 3, 2, 3, 3, 2, 3, 0, 3, -2, 2, -3, 0, -3, -2, -3, -3, -2, -3, 0, -3, 1, -3, 2, -2, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ah7od"]
size = Vector2(8, 8)

[node name="bomb" type="Node2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_bbuuw")

[node name="bomb1" type="AnimatedSprite2D" parent="."]
light_mask = 2
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_76o5c")
frame_progress = 0.770754

[node name="bomb2" type="AnimatedSprite2D" parent="."]
visible = false
light_mask = 2
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_snesk")
frame_progress = 0.231033

[node name="bomb3" type="AnimatedSprite2D" parent="."]
visible = false
light_mask = 2
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_61sk8")
frame_progress = 0.267753

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.94902, 0.258824, 0.027451, 1)
energy = 5.0
texture = ExtResource("4_gmvrb")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
y_sort_enabled = true
shape = SubResource("RectangleShape2D_d6ses")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_u8h06")

[node name="radius" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
shape = SubResource("RectangleShape2D_ah7od")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_d6ses")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(13, 0)
shape = SubResource("RectangleShape2D_d6ses")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_d6ses")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(-8, 0)
shape = SubResource("RectangleShape2D_d6ses")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(-6, -6)
shape = SubResource("RectangleShape2D_d6ses")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(-14, 0)
shape = SubResource("RectangleShape2D_d6ses")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_d6ses")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(6, 6)
shape = SubResource("RectangleShape2D_d6ses")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(-7, 6)
shape = SubResource("RectangleShape2D_d6ses")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_d6ses")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_d6ses")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="radius"]
y_sort_enabled = true
position = Vector2(6, -6)
shape = SubResource("RectangleShape2D_d6ses")
